--- a/index.html
+++ b/index.html
@@ -20,13 +20,7 @@
       property="og:description"
       content="Le Hub des Investisseurs et Fournisseurs d'Afrique. Rejoignez le plus grand salon international dédié aux investisseurs et fournisseurs en Afrique."
     />
-    <link rel="fav icon" href="logo.png" type="/image/png" />
-    <!-- <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@sifia_net" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+    <link rel="fav icon" href="fav.png" type="/image/png" />
   </head>
 
   <body>
